--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Hola</title>
+<style>
+/*p{
+ color: red;
+ text-align: center;
+ //font-size:50px;
+ font-family:serif; 
+ //margin:auto;
+}*/
+/* #para1{
+text-align: center;
+color: red;
+}*/
+
+/*.center{
+text-alingn:center;
+color:red;
+}*/
+
+div{
+width:300px;
+border:15px solid green;
+padding:50px;
+margin:20px;
+}
+</style>
 </head>
 <body>
-<h1>Bienvenido</h1>
+// <p id ="para1">Hello World!</p>
+ //<p>These paragraphs are styled with CSS. This paragraph is not affected by the style.</p>
+<h1 class="center">Red and center-aligned heading</h1>
+<p class="center"> Red and center-aligned paragraph</p>
+<div><p>fdjghdghdghdhdidhgiidfd</p></div>
 </body>
 </html>
