--- a/Proyecto/indexP.html
+++ b/Proyecto/indexP.html
@@ -24,10 +24,20 @@
     <div class="imgITA">
         <img src="img/imagenITA1.jfif" alt="" >
         <img src="img/imagenITA2.jfif" alt="" >
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+      
+    </div>
+    <div id="carrusel-contenido">
+        <div id="carrusel-caja">
+            <div class="carrusel-elemento">
+                <img class="imagenes" src="img/imagenITA1.jfif" >
+            </div>
+            <div class="carrusel-elemento">   
+                <img class="imagenes" src="img/imagenITA2.jfif">
+            </div>
+            <div class="carrusel-elemento">   
+                <img class="imagenes" src="imagenes/imagen-3.jpg">                        
+            </div>
+        </div>
     </div>
     <footer>
         <p>Datos de contacto:</p> 
