--- a/Proyecto/indexP.html
+++ b/Proyecto/indexP.html
@@ -18,7 +18,7 @@
 
     <div id="ubicacion">
         <a href="https://goo.gl/maps/zVrFpS7o1JRNfAi18" target="_blank"><img src="img/ubicacion.png" alt="Ubicacion del evento"></a>
-
+</div>
     <p>Fecha y hora</p>
     <p>11 de noviembre del 2022</p>
     <p>7:00pm</p>
@@ -30,7 +30,7 @@
 
     <div class="imgITA">
         <img src="img/imagenITA1.jfif" alt="" >
-        <!-- <img src="img/imagenITA2.jfif" alt="" > -->
+        <img src="img/imagenITA2.jfif" alt="" > 
       
     </div>
 
