--- a/Proyecto/indexP.html
+++ b/Proyecto/indexP.html
@@ -14,14 +14,14 @@
     </div>
     
 
-    <p>jfdkkkkkkkkkkkjjfhd</p>
+   
 
     <div id="ubicacion">
         <a href="https://goo.gl/maps/zVrFpS7o1JRNfAi18" target="_blank"><img src="img/ubicacion.png" alt="Ubicacion del evento"></a>
 </div>
-    <p>Fecha y hora</p>
-    <p>11 de noviembre del 2022</p>
-    <p>7:00pm</p>
+    <p id="Bhorario"><strong>Fecha y hora</strong></p>
+    <p id="Nhorario">11 de noviembre del 2022</p>
+    <p id="Nhora">7:00pm</p>
    
     
     <div class="contacto"><a href="https://docs.google.com/forms/d/e/1FAIpQLScg97Y5DyyHfulvj31Y7HRvskkZ3Vjop6F2HwE05hJ77sxmcQ/viewform?usp=sf_link" target="_blank" ><img src="img/lista-de-asistentes.png" alt="Formulario de asistencia" class="contacto"></a>
