--- a/Practicas/validaciones/index.html
+++ b/Practicas/validaciones/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+    <nav>pruebas</nav>
     <div>
         <h1>Formulario</h1>
         <input type="text" name="" id="" placeholder="Ingresa tu Nombre">
