--- a/Practicas/validaciones/index.html
+++ b/Practicas/validaciones/index.html
@@ -16,6 +16,15 @@
         <h1>Formulario</h1>
         <input type="text" name="" id="" placeholder="Ingresa tu Nombre">
         <input type="number" name="" id="" placeholder="Ingresa tu numero de control">
+
+        <select name="" id="">
+            <option value="Select">Sistemas</option>
+            <option value="">Logistica</option>
+            <option value="">Biologia</option>
+            <option value="">Industrial</option>
+            <option value="">Agronomia</option>
+            <option value="">Administración</option>
+        </select>
         <input type="text" name="" id="" placeholder="Ingresa tu carrera">
         <input type="number" name="" id="" placeholder="Ingresa tu numero de telefono">
     </div>
