--- a/Practicas/validaciones/index.html
+++ b/Practicas/validaciones/index.html
@@ -13,11 +13,11 @@
 <body>
     <nav>pruebas</nav>
     <div>
-        <h1>Formulario</h1>
+        <h1>Formulario de registro</h1>
         <input type="text" name="" id="" placeholder="Ingresa tu Nombre">
-        <input type="number" name="" id="" placeholder="Ingresa tu numero de control">
+        <input type="text" name="" id="" placeholder="Ingresa tu numero de control">
 
-        <select name="" id="">
+        <select name="carreras" id="selecarreras">
             <option value="Select">Sistemas</option>
             <option value="">Logistica</option>
             <option value="">Biologia</option>
@@ -26,7 +26,8 @@
             <option value="">Administración</option>
         </select>
         <input type="text" name="" id="" placeholder="Ingresa tu carrera">
-        <input type="number" name="" id="" placeholder="Ingresa tu numero de telefono">
+        <input type="tel" name="" id="" placeholder="Ingresa tu numero de telefono">
+        <input type="submit" value="Registrar" name="registrar">
     </div>
 </body>
 </html>
