--- a/Practicas/validaciones/index.html
+++ b/Practicas/validaciones/index.html
@@ -8,14 +8,43 @@
 
     <link rel="stylesheet" href="styles.css">
 
+<script>
 
+const nombres = document.getElementById("Nombres");
+const control = document.getElementById("Control");
+const telefono = document.getElementById("Telefono");
+</script>
 </head>
 <body>
     <nav>pruebas</nav>
     <div>
+        
         <h1>Formulario de registro</h1>
-        <input type="text" name="" id="" placeholder="Ingresa tu Nombre">
-        <input type="text" name="" id="" placeholder="Ingresa tu numero de control">
+        <input type="text" name="" id="Nombres" placeholder="Ingresa tu Nombre" onblur="cambiarAMayuscula(this)">
+        <script>
+            function cambiarAMayuscula(elementoNombre){
+                let textoNombre = elementoNombre.value;
+                elementoNombre.value = textoNombre.toUpperCase();
+            }
+
+            form.addEventListener("submit", e=> ){
+                e.preventDefault();
+                let regexTelefono = /^[\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4,6}$/im
+
+                if(telefono.value.length <= 8){
+                    alert("numero de telefono menor a 9 digitos") ;
+                }
+
+            }
+
+
+
+
+
+
+
+        </script>
+        <input type="text" name="" id="Control" placeholder="Ingresa tu numero de control">
 
         <select name="carreras" id="selecarreras">
             <option value="Select">Sistemas</option>
@@ -26,7 +55,7 @@
             <option value="">Administración</option>
         </select>
         <input type="text" name="" id="" placeholder="Ingresa tu carrera">
-        <input type="tel" name="" id="" placeholder="Ingresa tu numero de telefono">
+        <input type="tel" name="Telefono" id="" placeholder="Ingresa tu numero de telefono">
         <input type="submit" value="Registrar" name="registrar">
     </div>
 </body>
